# AICodingSystem

./: .env.example  .gitignore  GAP_ANALYSIS.md  Makefile  README.md  TODO.md  TZ_AI_Coding_Pipeline.docx  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  d7e6469afc83_add_card_modules.py
backend/app/: config.py  database.py  main.py  redis.py
backend/app/agents/: base.py  claude_agent.py  codex_agent.py  coding_agent.py  fallback.py  gemini_agent.py  meta_review_agent.py  model_router.py  negotiation.py  planning_agent.py  review_agent.py  router.py  security_agent.py  test_gen_agent.py
backend/app/api/: deps.py
backend/app/ci/: builder.py  ci_feedback.py  deployer.py  security_scanner.py  self_healing.py  test_runner.py
backend/app/context/: code_parser.py  embeddings.py  engine.py  review_context.py  vector_store.py
backend/app/git/: diff_parser.py  github_client.py  repo_manager.py
backend/app/middleware/: logging.py  rate_limiter.py
backend/app/models/: __init__.py  ai_code_generation.py  ai_log.py  ai_plan.py  attachment.py  base_types.py  code_embedding.py  comment.py  deployment.py  notification.py  project.py  review.py  ticket.py  (+3 more)
backend/tests/: conftest.py  test_agent_entropy_collector.py  test_agent_memory.py  test_agent_safety_evaluator.py  test_agent_sandbox.py  test_agentic_trust.py  test_code_efficiency_analyzer.py  test_config.py  test_database.py  test_diff_size_limiter.py  test_dual_gauge.py  test_guardrail_orchestrator.py  test_license_compliance.py  test_llm_judge.py  test_main.py  test_multi_agent_consensus.py  test_multi_model_review_router.py  test_output_grounding.py  test_parallel_guardrail_runner.py  test_prompt_drift_monitor.py  test_prompt_optimizer.py  test_redis.py  test_regression_test_guard.py  test_review_quality_scorer.py  test_secure_coding_graph.py  test_self_correction.py  test_sensitive_zone_policy.py  test_static_analysis_loop.py  test_tool_gateway.py
(+378 files in other folders)
